--- a/locksmith-welland.html
+++ b/locksmith-welland.html
@@ -45,9 +45,7 @@
     </script>
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="assets/images/perfect-key-locksmith-logo.png">
-    <link rel="apple-touch-icon" href="assets/images/perfect-key-locksmith-logo.png">
-    
+
     <!-- Preconnect for Speed -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -256,6 +254,13 @@
         .service-detail-list li svg{color:var(--primary);flex-shrink:0}
     </style>
     <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
+    <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png">
 </head>
 <body>
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KLHQ6LQQ" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
