--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -7,8 +7,7 @@
     <meta name="description" content="Privacy Policy for Perfect Key Locksmith. Learn how we collect, use, and protect your personal information when you use our locksmith services in Welland and the Niagara Region.">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://perfectkeylocksmith.com/privacy-policy.html">
-    <link rel="icon" type="image/png" href="assets/images/perfect-key-locksmith-logo.png">
-    
+
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
@@ -100,6 +99,13 @@
             border-top: 1px solid #e2e8f0;
         }
     </style>
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
+    <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png">
 </head>
 <body>
     <div class="header">
@@ -206,5 +212,4 @@
     </div>
 </body>
 </html>
-
 
