--- a/404.html
+++ b/404.html
@@ -7,8 +7,7 @@
     <meta name="description" content="The page you're looking for doesn't exist. Contact Perfect Key Locksmith for 24/7 emergency locksmith services in Welland and the Niagara Region.">
     <meta name="robots" content="noindex, follow">
     <link rel="canonical" href="https://perfectkeylocksmith.com/404.html">
-    <link rel="icon" type="image/png" href="assets/images/perfect-key-locksmith-logo.png">
-    
+
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
@@ -98,6 +97,13 @@
             text-decoration: underline;
         }
     </style>
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
+    <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png">
 </head>
 <body>
     <div class="container">
@@ -122,5 +128,4 @@
     </div>
 </body>
 </html>
-
 
