--- a/emergency-locksmith-thorold.html
+++ b/emergency-locksmith-thorold.html
@@ -8,9 +8,16 @@
     <meta name="keywords" content="24 hour locksmith thorold, emergency locksmith thorold, emergency locksmith near me, 24/7 locksmith thorold, night locksmith thorold">
     <meta name="robots" content="index, follow"><link rel="canonical" href="https://perfectkeylocksmith.com/emergency-locksmith-thorold.html">
     <script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","serviceType":"Emergency Locksmith","name":"24 Hour Emergency Locksmith Thorold","provider":{"@type":"Locksmith","name":"Perfect Key Locksmith","telephone":"+1-343-312-8468","openingHours":"Mo-Su 00:00-23:59"},"areaServed":{"@type":"City","name":"Thorold"}}</script>
-    <link rel="icon" type="image/png" href="assets/images/perfect-key-locksmith-logo.png">
+    
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <style>*{margin:0;padding:0;box-sizing:border-box}:root{--primary:#dc2626;--dark:#0f172a;--navy:#1e293b;--white:#fff}body{font-family:'Inter',system-ui,sans-serif;color:#334155;line-height:1.7}.container{max-width:1200px;margin:0 auto;padding:0 20px}a{text-decoration:none;color:inherit}.emergency-bar{background:var(--primary);padding:16px 0;text-align:center;color:var(--white);animation:pulse 2s infinite}@keyframes pulse{0%,100%{opacity:1}50%{opacity:.85}}.emergency-bar a{color:var(--white);font-weight:900;font-size:20px}.header{background:var(--dark);position:sticky;top:0;z-index:1000}.header-inner{display:flex;align-items:center;justify-content:space-between;padding:12px 0}.logo img{height:60px}.header-cta{background:var(--primary);color:var(--white);padding:14px 28px;border-radius:8px;font-weight:800;animation:pulse 2s infinite}.hero{background:linear-gradient(135deg,var(--dark),#1a0a0a);padding:60px 0;color:var(--white)}@media(min-width:768px){.hero{padding:80px 0}}.hero h1{font-size:36px;font-weight:900;line-height:1.1;margin-bottom:20px}@media(min-width:768px){.hero h1{font-size:52px}}.hero h1 span{color:var(--primary)}.hero-text{font-size:18px;opacity:.9;margin-bottom:24px}.hero-phone{display:inline-flex;background:var(--primary);color:var(--white);padding:24px 48px;border-radius:16px;font-size:28px;font-weight:900;animation:pulse 2s infinite}.content-section{padding:60px 0}.content-text{max-width:800px;margin:0 auto}.content-text h2{font-size:24px;font-weight:800;color:var(--dark);margin:24px 0 12px}.content-text p{margin-bottom:16px}.content-text ul{list-style:none;padding:0}.content-text li{padding:10px 0;padding-left:28px;position:relative}.content-text li::before{content:'🚨';position:absolute;left:0}.cta-section{background:var(--primary);padding:80px 0;text-align:center}.cta-section h2{font-size:36px;font-weight:900;color:var(--white);margin-bottom:16px}.cta-section p{color:rgba(255,255,255,.9);margin-bottom:28px}.cta-phone{display:inline-flex;background:var(--white);color:var(--primary);padding:24px 56px;border-radius:16px;font-size:32px;font-weight:900}.footer{background:var(--dark);color:var(--white);padding:40px 0 20px;text-align:center}.footer p{font-size:14px;color:rgba(255,255,255,.7)}</style>
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
+    <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png">
 </head>
 <body>
     <div class="emergency-bar"><div class="container">🚨 EMERGENCY LOCKSMITH • <a href="tel:+13433128468">(343) 312-8468</a> • 30-MIN RESPONSE 🚨</div></div>
@@ -50,5 +57,4 @@
     <footer class="footer"><div class="container"><p>© 2024 Perfect Key Locksmith | 24 Hour Locksmith Thorold</p></div></footer>
 </body>
 </html>
-
 
