--- a/house-lockout-thorold.html
+++ b/house-lockout-thorold.html
@@ -8,9 +8,16 @@
     <meta name="keywords" content="locked out of house thorold, house lockout thorold, home lockout thorold, residential lockout thorold, apartment lockout thorold">
     <meta name="robots" content="index, follow"><link rel="canonical" href="https://perfectkeylocksmith.com/house-lockout-thorold.html">
     <script type="application/ld+json">{"@context":"https://schema.org","@type":"Service","serviceType":"House Lockout Service","name":"House Lockout Service Thorold","provider":{"@type":"Locksmith","name":"Perfect Key Locksmith","telephone":"+1-343-312-8468"},"areaServed":{"@type":"City","name":"Thorold"}}</script>
-    <link rel="icon" type="image/png" href="assets/images/perfect-key-locksmith-logo.png">
+    
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <style>*{margin:0;padding:0;box-sizing:border-box}:root{--primary:#dc2626;--dark:#0f172a;--navy:#1e293b;--light:#f8fafc;--text:#334155;--white:#fff;--green:#16a34a}body{font-family:'Inter',system-ui,sans-serif;color:var(--text);line-height:1.7}.container{max-width:1200px;margin:0 auto;padding:0 20px}a{text-decoration:none;color:inherit}.top-bar{background:var(--green);padding:12px 0;text-align:center;color:var(--white);font-weight:600}.top-bar a{color:var(--white);text-decoration:underline}.header{background:var(--dark);position:sticky;top:0;z-index:1000}.header-inner{display:flex;align-items:center;justify-content:space-between;padding:12px 0}.logo img{height:60px}.header-cta{background:var(--primary);color:var(--white);padding:12px 24px;border-radius:8px;font-weight:700}.hero{background:linear-gradient(135deg,var(--dark),var(--navy));padding:60px 0;color:var(--white)}@media(min-width:768px){.hero{padding:80px 0}}.hero h1{font-size:32px;font-weight:900;line-height:1.15;margin-bottom:20px}@media(min-width:768px){.hero h1{font-size:44px}}.hero h1 span{color:var(--primary)}.hero-text{font-size:18px;opacity:.9;margin-bottom:24px}.hero-phone{display:inline-flex;background:var(--primary);color:var(--white);padding:20px 40px;border-radius:12px;font-size:24px;font-weight:800}.content-section{padding:60px 0}.content-text{max-width:800px;margin:0 auto}.content-text h2{font-size:24px;font-weight:800;color:var(--dark);margin:24px 0 12px}.content-text p{margin-bottom:16px}.content-text ul{list-style:none;padding:0;margin-bottom:20px}.content-text li{padding:8px 0;padding-left:24px;position:relative}.content-text li::before{content:'✓';position:absolute;left:0;color:var(--primary);font-weight:700}.cta-section{background:var(--primary);padding:60px 0;text-align:center}.cta-section h2{font-size:32px;font-weight:900;color:var(--white);margin-bottom:16px}.cta-section p{color:rgba(255,255,255,.9);margin-bottom:24px}.cta-phone{display:inline-flex;background:var(--white);color:var(--primary);padding:20px 48px;border-radius:12px;font-size:28px;font-weight:900}.footer{background:var(--dark);color:var(--white);padding:40px 0 20px;text-align:center}.footer p{font-size:14px;color:rgba(255,255,255,.7)}</style>
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
+    <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png">
 </head>
 <body>
     <div class="top-bar"><div class="container">🏠 Locked Out in Thorold? <a href="tel:+13433128468">30-Min Response!</a></div></div>
@@ -50,5 +57,4 @@
     <footer class="footer"><div class="container"><p>© 2024 Perfect Key Locksmith | House Lockout Thorold</p></div></footer>
 </body>
 </html>
-
 
