--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
     <meta property="og:image" content="https://perfectkeylocksmith.com/assets/images/og-image.jpg">
     
     <!-- Favicon -->
-    <link href="assets/images/perfect-key-locksmith-logo.png" rel="shortcut icon" type="image/png">
-    
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -1155,6 +1154,13 @@
             }
         }
     </style>
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
+    <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png">
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
