--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -7,8 +7,7 @@
     <meta name="description" content="Terms of Service for Perfect Key Locksmith. Read our service terms, pricing policies, and warranty information for locksmith services in Welland and Niagara Region.">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://perfectkeylocksmith.com/terms-of-service.html">
-    <link rel="icon" type="image/png" href="assets/images/perfect-key-locksmith-logo.png">
-    
+
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
@@ -104,6 +103,13 @@
             border-top: 1px solid #e2e8f0;
         }
     </style>
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
+    <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png">
 </head>
 <body>
     <div class="header">
@@ -219,5 +225,4 @@
     </div>
 </body>
 </html>
-
 
